Moved some code from (too big) board.cpp to new move.cpp and engine.cpp.

--- a/RubiChess-Linux/RubiChess-Linux.vcxproj
+++ b/RubiChess-Linux/RubiChess-Linux.vcxproj
@@ -98,8 +98,10 @@
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="..\RubiChess\board.cpp" />
+    <ClCompile Include="..\RubiChess\engine.cpp" />
     <ClCompile Include="..\RubiChess\eval.cpp" />
     <ClCompile Include="..\RubiChess\main.cpp" />
+    <ClCompile Include="..\RubiChess\move.cpp" />
     <ClCompile Include="..\RubiChess\search.cpp" />
     <ClCompile Include="..\RubiChess\tbprobe.cpp" />
     <ClCompile Include="..\RubiChess\transposition.cpp" />
