--- a/RubiChess/RubiChess.vcxproj.filters
+++ b/RubiChess/RubiChess.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="tbprobe.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="move.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="engine.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RubiChess.h">
