More wip. With these changes the mingw build with -static and -flto seems to work. profile-build in combination with lto still segfaults and displays strange warning at compile time.

--- a/RubiChess/Makefile
+++ b/RubiChess/Makefile
@@ -12,7 +12,7 @@ profile_make = gcc-profile-make
 profile_use = gcc-profile-use
 
 
-ifeq ($(OS),Windows_NTxx)
+ifeq ($(OS),Windows_NT)
     LDFLAGS += -static
 endif
 DEPS = RubiChess.h
